# AppTest_v05

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  LICENSE  README.md  VARIABLES.md  package.json
data/: app.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/mqtt/: config.rs  core.rs  mod.rs
src-tauri/src/services/mqtt/greenhouse_sensor/: aggregator.rs  decoder.rs  greenhouse_aggregator.rs  mod.rs  subscriber.rs
src-tauri/src/services/storage/: sqlite.rs
src/lib/components/: Button.svelte  FlexRowCard.svelte  LiveLineChart.svelte  SensorCard.svelte  StatusIndicator.svelte  VerticalGauge.svelte
src/routes/: +page.svelte
