[package]
name = "apptest_v05"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "apptest_v05_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rumqttc = "0.24"
# ✅ use ONLY rusqlite for SQLite (no sqlx) to avoid libsqlite3-sys conflicts
rusqlite = { version = "0.37", features = ["bundled"] }
